# Delta-Engine

./: CMakeLists.txt  README.md
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
src/: main.cpp
src/log/: logger.cpp  logger.hpp
src/render/: resource_manager.cpp  resource_manager.hpp
src/render/objects/shaders/: shader_program.cpp  shader_program.hpp
src/renderer/: ResourceManager.cpp  ResourceManager.hpp  ShaderProgram.cpp  ShaderProgram.hpp
